--- a/LM_SCAD_MCP_np_cython_MODULE.ipynb
+++ b/LM_SCAD_MCP_np_cython_MODULE.ipynb
@@ -63,7 +63,7 @@
     "    To calculate soft-thresholding mapping of a given ONE-DIMENSIONAL tensor, BESIDES THE FIRST TERM (so beta_0 will not be penalized). \n",
     "    This function is to be used for calculation involving L1 penalty term later. \n",
     "    '''\n",
-    "    return np.concatenate((np.array([x[0]]), np.where(np.abs(x[1:])>lambda_, x[1:] - np.sign(x[1:])*lambda_, 0)))\n",
+    "    return np.hstack((np.array([x[0]]), np.where(np.abs(x[1:])>lambda_, x[1:] - np.sign(x[1:])*lambda_, 0)))\n",
     "\n",
     "soft_thresholding(np.random.rand(20),3.1)\n",
     "\n",
