--- a/plink_filtering_MODULE.ipynb
+++ b/plink_filtering_MODULE.ipynb
@@ -152,6 +152,9 @@
     "\n",
     "# outcome_iid should be a  list of strings for identifiers \n",
     "def continuous_filter(bed_file, bim_file, fam_file, outcome, outcome_iid, a_min=100., a_max=250., N=500):\n",
+    "    \"\"\"\n",
+    "    (Single Core version) take plink files to calculate the mutual information between the continuous outcome and many SNP variables.\n",
+    "    \"\"\"\n",
     "    bed1 = open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
     "    gene_iid = np.array(list(bed1.iid))\n",
     "    bed1_sid = np.array(list(bed1.sid))\n",
@@ -168,6 +171,9 @@
     "    return MI_UKBB\n",
     "\n",
     "def binary_filter(bed_file, bim_file, fam_file, outcome, outcome_iid, a_min=100., a_max=250., N=500):\n",
+    "    \"\"\"\n",
+    "    (Single Core version) take plink files to calculate the mutual information between the binary outcome and many SNP variables.\n",
+    "    \"\"\"\n",
     "    bed1 = open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
     "    gene_iid = np.array(list(bed1.iid))\n",
     "    bed1_sid = np.array(list(bed1.sid))\n",
@@ -185,6 +191,9 @@
     "\n",
     "\n",
     "def continuous_filter_parallel(bed_file, bim_file, fam_file, outcome, outcome_iid, a_min=100., a_max=250., N=500, chunck_size=60000):\n",
+    "    \"\"\"\n",
+    "    (Multiprocessing version) take plink files to calculate the mutual information between the continuous outcome and many SNP variables.\n",
+    "    \"\"\"\n",
     "    bed1 = open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
     "    gene_iid = np.array(list(bed1.iid))\n",
     "    bed1_sid = np.array(list(bed1.sid))\n",
@@ -212,6 +221,9 @@
     "\n",
     "\n",
     "def binary_filter_parallel(bed_file, bim_file, fam_file, outcome, outcome_iid, a_min=100., a_max=250., N=500, chunck_size=60000):\n",
+    "    \"\"\"\n",
+    "    (Multiprocessing version) take plink files to calculate the mutual information between the binary outcome and many SNP variables.\n",
+    "    \"\"\"\n",
     "    bed1 = open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
     "    gene_iid = np.array(list(bed1.iid))\n",
     "    bed1_sid = np.array(list(bed1.sid))\n",
@@ -281,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.9.12"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
