--- a/LM_SCAD_MCP_np_numba_MODULE.ipynb
+++ b/LM_SCAD_MCP_np_numba_MODULE.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-10T23:54:43.376551Z",
-     "start_time": "2022-07-10T23:54:41.829583Z"
+     "end_time": "2022-07-14T23:21:36.452780Z",
+     "start_time": "2022-07-14T23:21:35.735073Z"
     }
    },
    "outputs": [],
@@ -27,7 +27,7 @@
     "# import collections\n",
     "from scipy.linalg import toeplitz, block_diag\n",
     "from scipy.stats import median_abs_deviation as mad\n",
-    "# import multiprocessing\n",
+    "# import multiprocess\n",
     "# import cProfile\n",
     "# import itertools\n",
     "from numba import jit, njit\n",
@@ -50,8 +50,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-10T23:54:43.645673Z",
-     "start_time": "2022-07-10T23:54:43.378551Z"
+     "end_time": "2022-07-14T23:21:37.466392Z",
+     "start_time": "2022-07-14T23:21:36.454035Z"
     }
    },
    "outputs": [],
@@ -63,7 +63,7 @@
     "    To calculate soft-thresholding mapping of a given ONE-DIMENSIONAL tensor, BESIDES THE FIRST TERM (so beta_0 will not be penalized). \n",
     "    This function is to be used for calculation involving L1 penalty term later. \n",
     "    '''\n",
-    "    return np.concatenate((np.array([x[0]]), np.where(np.abs(x[1:])>lambda_, x[1:] - np.sign(x[1:])*lambda_, 0)))\n",
+    "    return np.hstack((np.array([x[0]]), np.where(np.abs(x[1:])>lambda_, x[1:] - np.sign(x[1:])*lambda_, 0)))\n",
     "\n",
     "soft_thresholding(np.random.rand(20),3.1)\n",
     "\n",
@@ -174,8 +174,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-10T23:54:43.726359Z",
-     "start_time": "2022-07-10T23:54:43.645673Z"
+     "end_time": "2022-07-14T23:21:37.510330Z",
+     "start_time": "2022-07-14T23:21:37.467495Z"
     }
    },
    "outputs": [],
@@ -540,8 +540,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-10T23:55:19.108236Z",
-     "start_time": "2022-07-10T23:54:43.728361Z"
+     "end_time": "2022-07-14T23:21:56.532582Z",
+     "start_time": "2022-07-14T23:21:37.511849Z"
     }
    },
    "outputs": [
@@ -562,7 +562,7 @@
       "  -8.95442224e-02  0.00000000e+00]\n",
       " [ 1.25529526e+00  1.86767007e+00 -1.90691276e+00 ...  1.00662533e-01\n",
       "  -9.61300285e-02  1.36140337e-04]]\n",
-      "4.09 s ± 618 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "2.2 s ± 620 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -602,8 +602,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-10T23:55:44.047302Z",
-     "start_time": "2022-07-10T23:55:19.109605Z"
+     "end_time": "2022-07-14T23:22:19.897818Z",
+     "start_time": "2022-07-14T23:21:56.533880Z"
     },
     "code_folding": []
    },
@@ -637,8 +637,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-10T23:55:52.222075Z",
-     "start_time": "2022-07-10T23:55:44.047302Z"
+     "end_time": "2022-07-14T23:22:29.923495Z",
+     "start_time": "2022-07-14T23:22:19.899456Z"
     }
    },
    "outputs": [
@@ -646,7 +646,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 s ± 115 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1.23 s ± 198 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -659,8 +659,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-10T23:55:52.238076Z",
-     "start_time": "2022-07-10T23:55:52.223076Z"
+     "end_time": "2022-07-14T23:22:29.929991Z",
+     "start_time": "2022-07-14T23:22:29.924976Z"
     }
    },
    "outputs": [
@@ -668,7 +668,7 @@
      "data": {
       "text/plain": [
        "(66,\n",
-       " array([ 1.28610153,  2.15247208, -1.92370802, ...,  0.        ,\n",
+       " array([ 1.28598359,  2.15247208, -1.92370802, ...,  0.        ,\n",
        "         0.16219557,  0.        ]))"
       ]
      },
@@ -686,8 +686,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-10T23:55:52.366387Z",
-     "start_time": "2022-07-10T23:55:52.239079Z"
+     "end_time": "2022-07-14T23:22:30.103990Z",
+     "start_time": "2022-07-14T23:22:29.931547Z"
     },
     "scrolled": true
    },
@@ -717,8 +717,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-10T23:55:52.373839Z",
-     "start_time": "2022-07-10T23:55:52.366528Z"
+     "end_time": "2022-07-14T23:22:30.107690Z",
+     "start_time": "2022-07-14T23:22:30.105283Z"
     }
    },
    "outputs": [
@@ -760,7 +760,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.9.12"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
