--- a/logistic_SCAD_MCP_np_numba_MODULE.ipynb
+++ b/logistic_SCAD_MCP_np_numba_MODULE.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-10T23:54:40.977849Z",
-     "start_time": "2022-07-10T23:54:38.711062Z"
+     "end_time": "2022-07-14T23:21:46.330891Z",
+     "start_time": "2022-07-14T23:21:45.325541Z"
     }
    },
    "outputs": [],
@@ -27,7 +27,7 @@
     "# import collections\n",
     "from scipy.linalg import toeplitz, block_diag\n",
     "from scipy.stats import median_abs_deviation as mad\n",
-    "# import multiprocessing\n",
+    "# import multiprocess\n",
     "# import cProfile\n",
     "# import itertools\n",
     "from numba import jit, njit\n",
@@ -50,8 +50,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-10T23:54:41.440631Z",
-     "start_time": "2022-07-10T23:54:40.977849Z"
+     "end_time": "2022-07-14T23:21:46.534632Z",
+     "start_time": "2022-07-14T23:21:46.332444Z"
     }
    },
    "outputs": [],
@@ -63,7 +63,7 @@
     "    To calculate soft-thresholding mapping of a given ONE-DIMENSIONAL tensor, BESIDES THE FIRST TERM (so beta_0 will not be penalized). \n",
     "    This function is to be used for calculation involving L1 penalty term later. \n",
     "    '''\n",
-    "    return np.concatenate((np.array([x[0]]), np.where(np.abs(x[1:])>lambda_, x[1:] - np.sign(x[1:])*lambda_, 0)))\n",
+    "    return np.hstack((np.array([x[0]]), np.where(np.abs(x[1:])>lambda_, x[1:] - np.sign(x[1:])*lambda_, 0)))\n",
     "\n",
     "soft_thresholding(np.random.rand(20),3.1)\n",
     "\n",
@@ -174,8 +174,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-10T23:54:41.520632Z",
-     "start_time": "2022-07-10T23:54:41.441634Z"
+     "end_time": "2022-07-14T23:21:46.607156Z",
+     "start_time": "2022-07-14T23:21:46.536435Z"
     }
    },
    "outputs": [],
@@ -523,11 +523,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-10T23:55:04.939380Z",
-     "start_time": "2022-07-10T23:54:41.522631Z"
+     "start_time": "2022-07-14T23:21:46.050Z"
     }
    },
    "outputs": [],
@@ -556,23 +555,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-10T23:55:48.622948Z",
-     "start_time": "2022-07-10T23:55:04.940381Z"
+     "start_time": "2022-07-14T23:21:46.071Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "90.7 ms ± 7.22 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
-      "4.46 s ± 437 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%timeit UAG_logistic_SCAD_MCP(design_matrix=X_sim, outcome=y_sim, tol=1e-2, maxit=500, _lambda=.2, penalty=\"SCAD\", a=3.7, gamma=2.)\n",
     "%timeit solution_path_logistic(design_matrix=X_sim, outcome=y_sim, tol=1e-2, maxit=500, lambda_=np.linspace(.01,.1,60)[::-1], penalty=\"SCAD\", a=3.7, gamma=2.)"
@@ -580,37 +569,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-10T23:55:48.640019Z",
-     "start_time": "2022-07-10T23:55:48.624391Z"
+     "start_time": "2022-07-14T23:21:46.085Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[4.18288649e-01, 0.00000000e+00, 0.00000000e+00, ...,\n",
-       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
-       "       [4.19652110e-01, 0.00000000e+00, 0.00000000e+00, ...,\n",
-       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
-       "       [4.20959440e-01, 0.00000000e+00, 0.00000000e+00, ...,\n",
-       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
-       "       ...,\n",
-       "       [4.50533893e-01, 0.00000000e+00, 4.79884573e-02, ...,\n",
-       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
-       "       [4.51245655e-01, 0.00000000e+00, 5.41205703e-02, ...,\n",
-       "        3.57689149e-04, 0.00000000e+00, 0.00000000e+00],\n",
-       "       [4.52171425e-01, 0.00000000e+00, 5.98629351e-02, ...,\n",
-       "        1.09629533e-03, 0.00000000e+00, 0.00000000e+00]])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fit2"
    ]
@@ -639,7 +604,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.9.12"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
