--- a/logistic_SCAD_MCP_np_MODULE.ipynb
+++ b/logistic_SCAD_MCP_np_MODULE.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-14T23:21:46.330891Z",
-     "start_time": "2022-07-14T23:21:45.325541Z"
+     "end_time": "2022-07-15T17:52:29.416975Z",
+     "start_time": "2022-07-15T17:52:29.057958Z"
     }
    },
    "outputs": [],
@@ -21,18 +21,18 @@
     "# import os, sys\n",
     "# import collections\n",
     "import numpy as np\n",
-    "import matplotlib.markers as markers\n",
-    "import matplotlib.pyplot as plt\n",
-    "import timeit\n",
+    "# import matplotlib.markers as markers\n",
+    "# import matplotlib.pyplot as plt\n",
+    "# import timeit\n",
     "# import collections\n",
-    "from scipy.linalg import toeplitz, block_diag\n",
-    "from scipy.stats import median_abs_deviation as mad\n",
-    "# import multiprocess\n",
+    "# from scipy.linalg import toeplitz, block_diag\n",
+    "# from scipy.stats import median_abs_deviation as mad\n",
+    "# import multiprocessing\n",
     "# import cProfile\n",
     "# import itertools\n",
     "from numba import jit, njit\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore') # this is just to hide all the warnings\n",
+    "# import warnings\n",
+    "# warnings.filterwarnings('ignore') # this is just to hide all the warnings\n",
     "# import rpy2.robjects as robjects\n",
     "# import matplotlib.pyplot as plt # change font globally to Times \n",
     "# plt.style.use('ggplot')\n",
@@ -50,8 +50,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-14T23:21:46.534632Z",
-     "start_time": "2022-07-14T23:21:46.332444Z"
+     "end_time": "2022-07-15T17:52:29.745178Z",
+     "start_time": "2022-07-15T17:52:29.418959Z"
     }
    },
    "outputs": [],
@@ -174,8 +174,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-14T23:21:46.607156Z",
-     "start_time": "2022-07-14T23:21:46.536435Z"
+     "end_time": "2022-07-15T17:52:29.839191Z",
+     "start_time": "2022-07-15T17:52:29.747107Z"
     }
    },
    "outputs": [],
@@ -188,21 +188,21 @@
     "    return (X.T@(np.tanh(X@beta_md/2.)/2.-y+.5))/(2.*N)\n",
     "\n",
     "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def update_smooth_grad_SCAD(N, X, beta_md, y, _lambda, a):\n",
+    "def update_smooth_grad_SCAD_logistic(N, X, beta_md, y, _lambda, a):\n",
     "    '''\n",
     "    Update the gradient of the smooth objective component for SCAD penalty.\n",
     "    '''\n",
     "    return update_smooth_grad_convex_logistic(N=N, X=X, beta_md=beta_md, y=y) + SCAD_concave_grad(x=beta_md, lambda_=_lambda, a=a)\n",
     "\n",
     "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def update_smooth_grad_MCP(N, X, beta_md, y, _lambda, gamma):\n",
+    "def update_smooth_grad_MCP_logistic(N, X, beta_md, y, _lambda, gamma):\n",
     "    '''\n",
     "    Update the gradient of the smooth objective component for MCP penalty.\n",
     "    '''\n",
     "    return update_smooth_grad_convex_logistic(N=N, X=X, beta_md=beta_md, y=y) + MCP_concave_grad(x=beta_md, lambda_=_lambda, gamma=gamma)\n",
     "\n",
     "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def eval_obj_SCAD(N, X, beta_md, y, _lambda, a, x_temp):\n",
+    "def eval_obj_SCAD_logistic(N, X, beta_md, y, _lambda, a, x_temp):\n",
     "    '''\n",
     "    evaluate value of the objective function.\n",
     "    '''\n",
@@ -210,7 +210,7 @@
     "    return (error.T@error)/(2.*N) + np.sum(SCAD(x_temp, lambda_=_lambda, a=a))\n",
     "\n",
     "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def eval_obj_MCP(N, X, beta_md, y, _lambda, gamma, x_temp):\n",
+    "def eval_obj_MCP_logistic(N, X, beta_md, y, _lambda, gamma, x_temp):\n",
     "    '''\n",
     "    evaluate value of the objective function.\n",
     "    '''\n",
@@ -219,12 +219,18 @@
     "\n",
     "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
     "def lambda_max_logistic(X, y):\n",
+    "    \"\"\"\n",
+    "    Calculate the lambda_max, i.e., the minimum lambda to nullify all penalized betas.\n",
+    "    \"\"\"\n",
     "    grad_at_0 = (y-np.mean(y))@X_temp/(2*len(y))\n",
     "    lambda_max = np.linalg.norm(grad_at_0[1:], ord=np.infty)\n",
     "    return lambda_max\n",
     "\n",
     "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
     "def strong_rule_seq_logistic(X, y, beta_old, lambda_new, lambda_old):\n",
+    "    \"\"\"\n",
+    "    Use sequential strong to determine which betas to be nullified next.\n",
+    "    \"\"\"\n",
     "    grad = np.abs((y-np.tanh(X@beta_old/2)/2-.5)@X_temp/(2*len(y)))\n",
     "    eliminated = (grad < 2*lambda_new - lambda_old) # True means the value gets eliminated\n",
     "    eliminated = np.hstack((np.array([False]), eliminated)) # because intercept coefficient is not penalized\n",
@@ -233,7 +239,7 @@
     "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
     "def UAG_logistic_SCAD_MCP(design_matrix, outcome, beta_0 = np.ones(1), tol=1e-2, maxit=500, _lambda=.5, penalty=\"SCAD\", a=3.7, gamma=2., L_convex=1.1, add_intercept_column = True):\n",
     "    '''\n",
-    "    Carry out the optimization.\n",
+    "    Carry out the optimization for penalized logistic model for a fixed lambda.\n",
     "    '''\n",
     "    X = design_matrix.copy()\n",
     "    y = outcome.copy()\n",
@@ -283,7 +289,7 @@
     "            old_speed_norm = speed_norm # restarting\n",
     "            speed_norm = np.linalg.norm(beta_md - beta_md_old, ord=2) # restarting\n",
     "            converged = (np.linalg.norm(beta_md - beta_md_old, ord=np.infty) < tol)\n",
-    "            smooth_grad = update_smooth_grad_SCAD(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, a=a)\n",
+    "            smooth_grad = update_smooth_grad_SCAD_logistic(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, a=a)\n",
     "            beta = soft_thresholding(x=beta - opt_lambda*smooth_grad, lambda_=opt_lambda*_lambda)\n",
     "            beta_ag = soft_thresholding(x=beta_md - opt_beta*smooth_grad, lambda_=opt_beta*_lambda)\n",
     "#             converged = np.all(np.max(np.abs(beta_md - beta_ag)/opt_beta) < tol).item()\n",
@@ -305,7 +311,7 @@
     "            old_speed_norm = speed_norm # restarting\n",
     "            speed_norm = np.linalg.norm(beta_md - beta_md_old, ord=2) # restarting\n",
     "            converged = (np.linalg.norm(beta_md - beta_md_old, ord=np.infty) < tol)\n",
-    "            smooth_grad = update_smooth_grad_MCP(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, gamma=gamma)\n",
+    "            smooth_grad = update_smooth_grad_MCP_logistic(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, gamma=gamma)\n",
     "            beta = soft_thresholding(x=beta - opt_lambda*smooth_grad, lambda_=opt_lambda*_lambda)\n",
     "            beta_ag = soft_thresholding(x=beta_md - opt_beta*smooth_grad, lambda_=opt_beta*_lambda)\n",
     "#             converged = np.all(np.max(np.abs(beta_md - beta_ag)/opt_beta) < tol).item()\n",
@@ -319,39 +325,39 @@
     "#     if self.penalty == \"SCAD\":\n",
     "#         L = max([self.L_convex, 1/(self.a-1)])\n",
     "#         self.vanilla_stepsize = 1/L\n",
-    "#         self.eval_obj_SCAD(self.beta_md, self.obj_value)\n",
-    "#         self.eval_obj_SCAD(self.beta, self.obj_value_ORIGINAL)\n",
-    "#         self.eval_obj_SCAD(self.beta_ag, self.obj_value_AG)\n",
+    "#         self.eval_obj_SCAD_logistic(self.beta_md, self.obj_value)\n",
+    "#         self.eval_obj_SCAD_logistic(self.beta, self.obj_value_ORIGINAL)\n",
+    "#         self.eval_obj_SCAD_logistic(self.beta_ag, self.obj_value_AG)\n",
     "#         self.old_beta = self.beta_md - 10.\n",
     "#         while not self.converged:\n",
     "#             self.k += 1\n",
     "#             if self.k <= self.maxit:\n",
-    "#                 self.update_smooth_grad_SCAD()\n",
+    "#                 self.update_smooth_grad_SCAD_logistic()\n",
     "#                 self.beta_md = self.soft_thresholding(self.beta_md - self.vanilla_stepsize*self.smooth_grad, self.vanilla_stepsize*self._lambda)\n",
     "#                 self.converged = np.all(np.max(np.abs(self.beta_md - self.old_beta)) < self.tol).item()\n",
     "#                 self.old_beta = self.beta_md.copy()\n",
-    "#                 self.eval_obj_SCAD(self.beta_md, self.obj_value)\n",
-    "#                 self.eval_obj_SCAD(self.beta, self.obj_value_ORIGINAL)\n",
-    "#                 self.eval_obj_SCAD(self.beta_ag, self.obj_value_AG)\n",
+    "#                 self.eval_obj_SCAD_logistic(self.beta_md, self.obj_value)\n",
+    "#                 self.eval_obj_SCAD_logistic(self.beta, self.obj_value_ORIGINAL)\n",
+    "#                 self.eval_obj_SCAD_logistic(self.beta_ag, self.obj_value_AG)\n",
     "#             else:\n",
     "#                 break\n",
     "#     else:\n",
     "#         L = max([self.L_convex, 1/self.gamma])\n",
     "#         self.vanilla_stepsize = 1/L\n",
-    "#         self.eval_obj_MCP(self.beta_md, self.obj_value)\n",
-    "#         self.eval_obj_MCP(self.beta, self.obj_value_ORIGINAL)\n",
-    "#         self.eval_obj_MCP(self.beta_ag, self.obj_value_AG)\n",
+    "#         self.eval_obj_MCP_logistic(self.beta_md, self.obj_value)\n",
+    "#         self.eval_obj_MCP_logistic(self.beta, self.obj_value_ORIGINAL)\n",
+    "#         self.eval_obj_MCP_logistic(self.beta_ag, self.obj_value_AG)\n",
     "#         self.old_beta = self.beta_md - 10.\n",
     "#         while not self.converged:\n",
     "#             self.k += 1\n",
     "#             if self.k <= self.maxit:\n",
-    "#                 self.update_smooth_grad_MCP()\n",
+    "#                 self.update_smooth_grad_MCP_logistic()\n",
     "#                 self.beta_md = self.soft_thresholding(self.beta_md - self.vanilla_stepsize*self.smooth_grad, self.vanilla_stepsize*self._lambda)\n",
     "#                 self.converged = np.all(np.max(np.abs(self.beta_md - self.old_beta)) < self.tol).item()\n",
     "#                 self.old_beta = self.beta_md.copy()\n",
-    "#                 self.eval_obj_MCP(self.beta_md, self.obj_value)\n",
-    "#                 self.eval_obj_MCP(self.beta, self.obj_value_ORIGINAL)\n",
-    "#                 self.eval_obj_MCP(self.beta_ag, self.obj_value_AG)\n",
+    "#                 self.eval_obj_MCP_logistic(self.beta_md, self.obj_value)\n",
+    "#                 self.eval_obj_MCP_logistic(self.beta, self.obj_value_ORIGINAL)\n",
+    "#                 self.eval_obj_MCP_logistic(self.beta_ag, self.obj_value_AG)\n",
     "#             else:\n",
     "#                 break\n",
     "#     return self.report_results()\n",
@@ -360,7 +366,7 @@
     "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
     "def solution_path_logistic(design_matrix, outcome, lambda_, beta_0 = np.ones(1), tol=1e-2, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2., add_intercept_column=True):\n",
     "    '''\n",
-    "    Carry out the optimization.\n",
+    "    Carry out the optimization for the solution path without the strong rule.\n",
     "    '''\n",
     "    #     add design matrix column for the intercept, if it's not there already\n",
     "    if add_intercept_column == True:\n",
@@ -380,7 +386,7 @@
     "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
     "def _UAG_logistic_SCAD_MCP_strongrule(design_matrix, outcome, beta_0 = np.ones(1), tol=1e-2, maxit=500, _lambda=.5, penalty=\"SCAD\", a=3.7, gamma=2., L_convex=1.1, add_intercept_column = True, strongrule=True):\n",
     "    '''\n",
-    "    Carry out the optimization.\n",
+    "    Carry out the optimization for a fixed lambda with strong rule.\n",
     "    '''\n",
     "    X = design_matrix.copy()\n",
     "    y = outcome.copy()\n",
@@ -437,7 +443,7 @@
     "            old_speed_norm = speed_norm # restarting\n",
     "            speed_norm = np.linalg.norm(beta_md - beta_md_old, ord=2) # restarting\n",
     "            converged = (np.linalg.norm(beta_md - beta_md_old, ord=np.infty) < tol)\n",
-    "            smooth_grad = update_smooth_grad_SCAD(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, a=a)\n",
+    "            smooth_grad = update_smooth_grad_SCAD_logistic(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, a=a)\n",
     "            beta = soft_thresholding(x=beta - opt_lambda*smooth_grad, lambda_=opt_lambda*_lambda)\n",
     "            beta_ag = soft_thresholding(x=beta_md - opt_beta*smooth_grad, lambda_=opt_beta*_lambda)\n",
     "#             converged = np.all(np.max(np.abs(beta_md - beta_ag)/opt_beta) < tol).item()\n",
@@ -459,7 +465,7 @@
     "            old_speed_norm = speed_norm # restarting\n",
     "            speed_norm = np.linalg.norm(beta_md - beta_md_old, ord=2) # restarting\n",
     "            converged = (np.linalg.norm(beta_md - beta_md_old, ord=np.infty) < tol)\n",
-    "            smooth_grad = update_smooth_grad_MCP(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, gamma=gamma)\n",
+    "            smooth_grad = update_smooth_grad_MCP_logistic(N=N, X=X, beta_md=beta_md, y=y, _lambda=_lambda, gamma=gamma)\n",
     "            beta = soft_thresholding(x=beta - opt_lambda*smooth_grad, lambda_=opt_lambda*_lambda)\n",
     "            beta_ag = soft_thresholding(x=beta_md - opt_beta*smooth_grad, lambda_=opt_beta*_lambda)\n",
     "#             converged = np.all(np.max(np.abs(beta_md - beta_ag)/opt_beta) < tol).item()\n",
@@ -482,6 +488,9 @@
     "\n",
     "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
     "def UAG_logistic_SCAD_MCP_strongrule(design_matrix, outcome, beta_0 = np.ones(1), tol=1e-2, maxit=500, _lambda=.5, penalty=\"SCAD\", a=3.7, gamma=2., L_convex=1.1, add_intercept_column = True, strongrule=True):\n",
+    "    \"\"\"\n",
+    "    Carry out the optimization for a fixed lambda for penanlized logistic model with strong rule.\n",
+    "    \"\"\"\n",
     "    _k, _beta_md, _elim = _UAG_logistic_SCAD_MCP_strongrule(design_matrix=design_matrix, outcome=outcome, beta_0 = beta_0, tol=tol, maxit=maxit, _lambda=_lambda, penalty=penalty, a=a, gamma=gamma, L_convex=L_convex, add_intercept_column = add_intercept_column, strongrule=strongrule)\n",
     "    output_beta = np.zeros(len(_elim))\n",
     "    output_beta[np.logical_not(_elim)] = _beta_md\n",
@@ -491,7 +500,7 @@
     "@jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
     "def solution_path_logistic_strongrule(design_matrix, outcome, lambda_, beta_0 = np.ones(1), tol=1e-2, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2., add_intercept_column=True):\n",
     "    '''\n",
-    "    Carry out the optimization.\n",
+    "    Carry out the optimization for the solution path of a penalized logistic model with strong rule.\n",
     "    '''\n",
     "    #     add design matrix column for the intercept, if it's not there already\n",
     "    _design_matrix = design_matrix.copy()\n",
@@ -523,14 +532,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2022-07-14T23:21:46.050Z"
+     "end_time": "2022-07-15T17:53:01.767761Z",
+     "start_time": "2022-07-15T17:52:29.841108Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\alphaIto\\AppData\\Local\\Temp\\ipykernel_14872\\1332484228.py:184: NumbaWarning: \u001b[1mCannot cache compiled function \"solution_path_logistic\" as it uses dynamic globals (such as ctypes pointers and large global arrays)\u001b[0m\n",
+      "  @jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n"
+     ]
+    }
+   ],
    "source": [
+    "import matplotlib.markers as markers\n",
+    "import matplotlib.pyplot as plt\n",
+    "import timeit\n",
+    "from scipy.linalg import toeplitz, block_diag\n",
+    "\n",
+    "\n",
     "# this cell is for profiling the function \n",
     "np.random.seed(0)\n",
     "N = 1000\n",
@@ -555,13 +580,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2022-07-14T23:21:46.071Z"
+     "end_time": "2022-07-15T17:54:06.730237Z",
+     "start_time": "2022-07-15T17:53:01.769764Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "118 ms ± 4.52 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "6.91 s ± 104 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
    "source": [
     "%timeit UAG_logistic_SCAD_MCP(design_matrix=X_sim, outcome=y_sim, tol=1e-2, maxit=500, _lambda=.2, penalty=\"SCAD\", a=3.7, gamma=2.)\n",
     "%timeit solution_path_logistic(design_matrix=X_sim, outcome=y_sim, tol=1e-2, maxit=500, lambda_=np.linspace(.01,.1,60)[::-1], penalty=\"SCAD\", a=3.7, gamma=2.)"
@@ -569,13 +604,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2022-07-14T23:21:46.085Z"
+     "end_time": "2022-07-15T17:54:06.745238Z",
+     "start_time": "2022-07-15T17:54:06.732240Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4.18288649e-01, 0.00000000e+00, 0.00000000e+00, ...,\n",
+       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
+       "       [4.19652110e-01, 0.00000000e+00, 0.00000000e+00, ...,\n",
+       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
+       "       [4.20959440e-01, 0.00000000e+00, 0.00000000e+00, ...,\n",
+       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
+       "       ...,\n",
+       "       [4.50533893e-01, 0.00000000e+00, 4.79884573e-02, ...,\n",
+       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
+       "       [4.51245655e-01, 0.00000000e+00, 5.41205703e-02, ...,\n",
+       "        3.57689149e-04, 0.00000000e+00, 0.00000000e+00],\n",
+       "       [4.52171425e-01, 0.00000000e+00, 5.98629351e-02, ...,\n",
+       "        1.09629533e-03, 0.00000000e+00, 0.00000000e+00]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fit2"
    ]
