--- a/plink_filtering_MODULE.ipynb
+++ b/plink_filtering_MODULE.ipynb
@@ -17,19 +17,18 @@
     "#from os.path import join\n",
     "#from pandas_plink import read_plink1_bin\n",
     "#from pandas_plink import get_data_folder\n",
-    "import matplotlib.pyplot as plt\n",
+    "# import matplotlib.pyplot as plt\n",
     "#from bgen_reader import open_bgen\n",
     "#from bed_reader import open_bed, sample_file\n",
-    "import pandas as pd\n",
+    "# import pandas as pd\n",
     "# import os\n",
-    "from pysnptools.distreader import Bgen, DistMemMap\n",
-    "from pathlib import Path\n",
-    "import numpy as np\n",
+    "# from pysnptools.distreader import Bgen, DistMemMap\n",
+    "# from pathlib import Path\n",
     "from bed_reader import open_bed\n",
-    "from pysnptools.snpreader import SnpData, SnpMemMap\n",
-    "from pysnptools.util import log_in_place\n",
-    "import matplotlib.pyplot as plt\n",
-    "from scipy.stats import gaussian_kde\n",
+    "# from pysnptools.snpreader import SnpData, SnpMemMap\n",
+    "# from pysnptools.util import log_in_place\n",
+    "# import matplotlib.pyplot as plt\n",
+    "# from scipy.stats import gaussian_kde\n",
     "from KDEpy import FFTKDE\n",
     "# from pybgen import PyBGEN\n",
     "import multiprocess as mp"
