--- a/plink_filtering_MODULE.ipynb
+++ b/plink_filtering_MODULE.ipynb
@@ -36,12 +36,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8ce8b66d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-13T22:01:46.188500Z",
-     "start_time": "2022-07-13T22:01:46.146565Z"
+     "end_time": "2022-07-20T04:03:12.426335Z",
+     "start_time": "2022-07-20T04:03:12.403835Z"
     }
    },
    "outputs": [],
@@ -212,7 +212,7 @@
     "        return _MI_slice\n",
     "    # multiprocessing starts here\n",
     "    ind = np.arange(len(bed1_sid))\n",
-    "    n_slices = np.floor(len(ind)/chunck_size)\n",
+    "    n_slices = np.ceil(len(ind)/chunck_size)\n",
     "    with mp.Pool(mp.cpu_count()) as p:\n",
     "        MI_UKBB = p.map(_continuous_filter_slice, np.array_split(ind, n_slices))\n",
     "    MI_UKBB = np.hstack(MI_UKBB)\n",
@@ -242,7 +242,7 @@
     "        return _MI_slice\n",
     "    # multiprocessing starts here\n",
     "    ind = np.arange(len(bed1_sid))\n",
-    "    n_slices = np.floor(len(ind)/chunck_size)\n",
+    "    n_slices = np.ceil(len(ind)/chunck_size)\n",
     "    with mp.Pool(mp.cpu_count()) as p:\n",
     "        MI_UKBB = p.map(_binary_filter_slice, np.array_split(ind, n_slices))\n",
     "    MI_UKBB = np.hstack(MI_UKBB)\n",
@@ -252,15 +252,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8a032b1b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-13T22:01:59.218821Z",
-     "start_time": "2022-07-13T22:01:46.190277Z"
+     "end_time": "2022-07-20T04:03:13.524923Z",
+     "start_time": "2022-07-20T04:03:13.237641Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m a \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mbinomial(\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m.3\u001b[39m, \u001b[38;5;241m200\u001b[39m)\n\u001b[1;32m      2\u001b[0m b \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mbinomial(\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m.3\u001b[39m, \u001b[38;5;241m200\u001b[39m)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(MI_binary(a, b, a_min\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.\u001b[39m, a_max\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2.\u001b[39m, N\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m500\u001b[39m))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
+    }
+   ],
    "source": [
     "a = np.random.binomial(2,.3, 200)\n",
     "b = np.random.binomial(2,.3, 200)\n",
