--- a/plink_filtering_MODULE.ipynb
+++ b/plink_filtering_MODULE.ipynb
@@ -46,6 +46,7 @@
    },
    "outputs": [],
    "source": [
+    "import multiprocess as mp\n",
     "def MI_continuous(a, b, a_min, a_max, N=500):\n",
     "    \"\"\"\n",
     "    calculate mutual information between continuous outcome and an SNP variable of 0,1,2\n",
